--- a/test/crab_TEMPLATE.cfg
+++ b/test/crab_TEMPLATE.cfg
@@ -5,7 +5,7 @@ scheduler               = remoteGlidein
 #use_server              = 1
 
 [CMSSW]
-#use_parent  = 1
+use_parent  = 1
 allow_NonProductionCMSSW = 1
 get_edm_output = 1
 #output_file = hltbitanalysis62X.root, hltbitanalysis700.root
@@ -19,8 +19,6 @@ publish_data		= 1
 storage_element = T3_US_FNALLPC
 #storage_element = cmseos.fnal.gov
 #storage_path = /srm/v2/server?SFN=/eos/uscms/store/user/lpctrig/ingabu/TMD/PU20bx25/
-thresholdLevel=10
-eMail=alejandro.gomez@cern.ch
 
 #[GRID]
 #se_black_list = T2_US_Nebraska
