--- a/test/multicrab.cfg
+++ b/test/multicrab.cfg
@@ -3,10 +3,11 @@ cfg = crab_TEMPLATE.cfg
 
 [COMMON]
 
-CMSSW.number_of_jobs        = 200
-CMSSW.total_number_of_events = 10000
-CMSSW.pset =  myproducer_openHLT.py
-USER.publish_data_name = openHLT_Prod_triggerStudies_allAK8
+CMSSW.number_of_jobs        = 400
+CMSSW.total_number_of_events = 20000
+CMSSW.pset =  myproducer_1p4e34_openHLT.py
+USER.publish_data_name = openHLT_Prod_triggerStudies_v720pre6_v4
+USER.additional_input_files = dttf_config.db
 
 
 ##### 13 TeV PU20bx25 QCD_antiEM ###
@@ -78,46 +79,39 @@ USER.publish_data_name = openHLT_Prod_triggerStudies_allAK8
 #CMSSW.pycfg_params = QCD_Pt-50to80_Tune4C_13TeV_pythia8_PU20bx25
 #USER.user_remote_dir = QCD_Pt-50to80_Tune4C_13TeV_pythia8_PU20bx25
 #USER.ui_working_dir= QCD_Pt-50to80_Tune4C_13TeV_pythia8_PU20bx25
-#
+
 #[QCD_Pt-80to120_Tune4C_13TeV_pythia8_PU20bx25]
 #CMSSW.datasetpath  = /QCD_Pt-80to120_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU20bx25_POSTLS162_V2-v1/AODSIM
-#CMSSW.pycfg_params = QCD_Pt-80to120_Tune4C_13TeV_pythia8_PU20bx25
 #USER.user_remote_dir = QCD_Pt-80to120_Tune4C_13TeV_pythia8_PU20bx25
 #USER.ui_working_dir= QCD_Pt-80to120_Tune4C_13TeV_pythia8_PU20bx25
 #
 #[QCD_Pt-120to170_Tune4C_13TeV_pythia8_PU20bx25]
 #CMSSW.datasetpath  = /QCD_Pt-120to170_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU20bx25_POSTLS162_V2-v1/AODSIM
-#CMSSW.pycfg_params = QCD_Pt-120to170_Tune4C_13TeV_pythia8_PU20bx25
 #USER.user_remote_dir = QCD_Pt-120to170_Tune4C_13TeV_pythia8_PU20bx25
 #USER.ui_working_dir= QCD_Pt-120to170_Tune4C_13TeV_pythia8_PU20bx25
 #
 #[QCD_Pt-170to300_Tune4C_13TeV_pythia8_PU20bx25]
 #CMSSW.datasetpath  = /QCD_Pt-170to300_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU20bx25_POSTLS162_V2-v1/AODSIM
-#CMSSW.pycfg_params = QCD_Pt-170to300_Tune4C_13TeV_pythia8_PU20bx25
 #USER.user_remote_dir = QCD_Pt-170to300_Tune4C_13TeV_pythia8_PU20bx25
 #USER.ui_working_dir= QCD_Pt-170to300_Tune4C_13TeV_pythia8_PU20bx25
 #
 #[QCD_Pt-300to470_Tune4C_13TeV_pythia8_PU20bx25]
 #CMSSW.datasetpath  = /QCD_Pt-300to470_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU20bx25_POSTLS162_V2-v1/AODSIM
-#CMSSW.pycfg_params = QCD_Pt-300to470_Tune4C_13TeV_pythia8_PU20bx25
 #USER.user_remote_dir = QCD_Pt-300to470_Tune4C_13TeV_pythia8_PU20bx25
 #USER.ui_working_dir= QCD_Pt-300to470_Tune4C_13TeV_pythia8_PU20bx25
 #
 #[QCD_Pt-470to600_Tune4C_13TeV_pythia8_PU20bx25]
 #CMSSW.datasetpath  = /QCD_Pt-470to600_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU20bx25_POSTLS162_V2-v1/AODSIM
-#CMSSW.pycfg_params = QCD_Pt-470to600_Tune4C_13TeV_pythia8_PU20bx25
 #USER.user_remote_dir = QCD_Pt-470to600_Tune4C_13TeV_pythia8_PU20bx25
 #USER.ui_working_dir= QCD_Pt-470to600_Tune4C_13TeV_pythia8_PU20bx25
 #
 #[QCD_Pt-600to800_Tune4C_13TeV_pythia8_PU20bx25]
 #CMSSW.datasetpath  = /QCD_Pt-600to800_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU20bx25_POSTLS162_V2-v1/AODSIM
-#CMSSW.pycfg_params = QCD_Pt-600to800_Tune4C_13TeV_pythia8_PU20bx25
 #USER.user_remote_dir = QCD_Pt-600to800_Tune4C_13TeV_pythia8_PU20bx25
 #USER.ui_working_dir= QCD_Pt-600to800_Tune4C_13TeV_pythia8_PU20bx25
 #
 #[QCD_Pt-800to1000_Tune4C_13TeV_pythia8_PU20bx25]
 #CMSSW.datasetpath  = /QCD_Pt-800to1000_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU20bx25_POSTLS162_V2-v1/AODSIM
-#CMSSW.pycfg_params = QCD_Pt-800to1000_Tune4C_13TeV_pythia8_PU20bx25
 #USER.user_remote_dir = QCD_Pt-800to1000_Tune4C_13TeV_pythia8_PU20bx25
 #USER.ui_working_dir= QCD_Pt-800to1000_Tune4C_13TeV_pythia8_PU20bx25
 #
@@ -160,71 +154,71 @@ USER.publish_data_name = openHLT_Prod_triggerStudies_allAK8
 #USER.user_remote_dir = QCD_Pt-15to30_Tune4C_13TeV_pythia8_PU40bx50
 #USER.ui_working_dir= QCD_Pt-15to30_Tune4C_13TeV_pythia8_PU40bx50
 
-[QCD_Pt-30to50_Tune4C_13TeV_pythia8_PU40bx50]
-CMSSW.datasetpath  = /QCD_Pt-30to50_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU40bx50_POSTLS162_V2-v1/GEN-SIM-RAW
-CMSSW.pycfg_params = QCD_Pt-30to50_Tune4C_13TeV_pythia8_PU40bx50
-USER.user_remote_dir = QCD_Pt-30to50_Tune4C_13TeV_pythia8_PU40bx50
-USER.ui_working_dir= QCD_Pt-30to50_Tune4C_13TeV_pythia8_PU40bx50
-
-[QCD_Pt-50to80_Tune4C_13TeV_pythia8_PU40bx50]
-CMSSW.datasetpath  = /QCD_Pt-50to80_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU40bx50_POSTLS162_V2-v1/GEN-SIM-RAW
-CMSSW.pycfg_params = QCD_Pt-50to80_Tune4C_13TeV_pythia8_PU40bx50
-USER.user_remote_dir = QCD_Pt-50to80_Tune4C_13TeV_pythia8_PU40bx50
-USER.ui_working_dir= QCD_Pt-50to80_Tune4C_13TeV_pythia8_PU40bx50
-
-[QCD_Pt-80to120_Tune4C_13TeV_pythia8_PU40bx50]
-CMSSW.datasetpath  = /QCD_Pt-80to120_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU40bx50_POSTLS162_V2-v1/GEN-SIM-RAW
-CMSSW.pycfg_params = QCD_Pt-80to120_Tune4C_13TeV_pythia8_PU40bx50
-USER.user_remote_dir = QCD_Pt-80to120_Tune4C_13TeV_pythia8_PU40bx50
-USER.ui_working_dir= QCD_Pt-80to120_Tune4C_13TeV_pythia8_PU40bx50
-
-[QCD_Pt-120to170_Tune4C_13TeV_pythia8_PU40bx50]
-CMSSW.datasetpath  = /QCD_Pt-120to170_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU40bx50_POSTLS162_V2-v1/GEN-SIM-RAW
-CMSSW.pycfg_params = QCD_Pt-120to170_Tune4C_13TeV_pythia8_PU40bx50
-USER.user_remote_dir = QCD_Pt-120to170_Tune4C_13TeV_pythia8_PU40bx50
-USER.ui_working_dir= QCD_Pt-120to170_Tune4C_13TeV_pythia8_PU40bx50
-
-[QCD_Pt-170to300_Tune4C_13TeV_pythia8_PU40bx50]
-CMSSW.datasetpath  = /QCD_Pt-170to300_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU40bx50_POSTLS162_V2-v1/GEN-SIM-RAW
-CMSSW.pycfg_params = QCD_Pt-170to300_Tune4C_13TeV_pythia8_PU40bx50
-USER.user_remote_dir = QCD_Pt-170to300_Tune4C_13TeV_pythia8_PU40bx50
-USER.ui_working_dir= QCD_Pt-170to300_Tune4C_13TeV_pythia8_PU40bx50
-
-[QCD_Pt-300to470_Tune4C_13TeV_pythia8_PU40bx50]
-CMSSW.datasetpath  = /QCD_Pt-300to470_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU40bx50_POSTLS162_V2-v1/GEN-SIM-RAW
-CMSSW.pycfg_params = QCD_Pt-300to470_Tune4C_13TeV_pythia8_PU40bx50
-USER.user_remote_dir = QCD_Pt-300to470_Tune4C_13TeV_pythia8_PU40bx50
-USER.ui_working_dir= QCD_Pt-300to470_Tune4C_13TeV_pythia8_PU40bx50
-
-[QCD_Pt-470to600_Tune4C_13TeV_pythia8_PU40bx50]
-CMSSW.datasetpath  = /QCD_Pt-470to600_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU40bx50_POSTLS162_V2-v1/GEN-SIM-RAW
-CMSSW.pycfg_params = QCD_Pt-470to600_Tune4C_13TeV_pythia8_PU40bx50
-USER.user_remote_dir = QCD_Pt-470to600_Tune4C_13TeV_pythia8_PU40bx50
-USER.ui_working_dir= QCD_Pt-470to600_Tune4C_13TeV_pythia8_PU40bx50
-
-[QCD_Pt-600to800_Tune4C_13TeV_pythia8_PU40bx50]
-CMSSW.datasetpath  = /QCD_Pt-600to800_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU40bx50_POSTLS162_V2-v1/GEN-SIM-RAW
-CMSSW.pycfg_params = QCD_Pt-600to800_Tune4C_13TeV_pythia8_PU40bx50
-USER.user_remote_dir = QCD_Pt-600to800_Tune4C_13TeV_pythia8_PU40bx50
-USER.ui_working_dir= QCD_Pt-600to800_Tune4C_13TeV_pythia8_PU40bx50
-
-[QCD_Pt-800to1000_Tune4C_13TeV_pythia8_PU40bx50]
-CMSSW.datasetpath  = /QCD_Pt-800to1000_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU40bx50_POSTLS162_V2-v1/GEN-SIM-RAW
-CMSSW.pycfg_params = QCD_Pt-800to1000_Tune4C_13TeV_pythia8_PU40bx50
-USER.user_remote_dir = QCD_Pt-800to1000_Tune4C_13TeV_pythia8_PU40bx50
-USER.ui_working_dir= QCD_Pt-800to1000_Tune4C_13TeV_pythia8_PU40bx50
-
-[QCD_Pt-1000to1400_Tune4C_13TeV_pythia8_PU40bx50]
-CMSSW.datasetpath  = /QCD_Pt-1000to1400_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU40bx50_POSTLS162_V2-v1/GEN-SIM-RAW
-CMSSW.pycfg_params = QCD_Pt-1000to1400_Tune4C_13TeV_pythia8_PU40bx50
-USER.user_remote_dir = QCD_Pt-1000to1400_Tune4C_13TeV_pythia8_PU40bx50
-USER.ui_working_dir= QCD_Pt-1000to1400_Tune4C_13TeV_pythia8_PU40bx50
-
-[QCD_Pt-1400to1800_Tune4C_13TeV_pythia8_PU40bx50]
-CMSSW.datasetpath  = /QCD_Pt-1400to1800_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU40bx50_POSTLS162_V1-v1/GEN-SIM-RAW
-CMSSW.pycfg_params = QCD_Pt-1400to1800_Tune4C_13TeV_pythia8_PU40bx50
-USER.user_remote_dir = QCD_Pt-1400to1800_Tune4C_13TeV_pythia8_PU40bx50
-USER.ui_working_dir= QCD_Pt-1400to1800_Tune4C_13TeV_pythia8_PU40bx50
+#[QCD_Pt-30to50_Tune4C_13TeV_pythia8_PU40bx50]
+#CMSSW.datasetpath  = /QCD_Pt-30to50_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU40bx50_POSTLS162_V2-v1/GEN-SIM-RAW
+#CMSSW.pycfg_params = QCD_Pt-30to50_Tune4C_13TeV_pythia8_PU40bx50
+#USER.user_remote_dir = QCD_Pt-30to50_Tune4C_13TeV_pythia8_PU40bx50
+#USER.ui_working_dir= QCD_Pt-30to50_Tune4C_13TeV_pythia8_PU40bx50
+#
+#[QCD_Pt-50to80_Tune4C_13TeV_pythia8_PU40bx50]
+#CMSSW.datasetpath  = /QCD_Pt-50to80_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU40bx50_POSTLS162_V2-v1/GEN-SIM-RAW
+#CMSSW.pycfg_params = QCD_Pt-50to80_Tune4C_13TeV_pythia8_PU40bx50
+#USER.user_remote_dir = QCD_Pt-50to80_Tune4C_13TeV_pythia8_PU40bx50
+#USER.ui_working_dir= QCD_Pt-50to80_Tune4C_13TeV_pythia8_PU40bx50
+#
+#[QCD_Pt-80to120_Tune4C_13TeV_pythia8_PU40bx50]
+#CMSSW.datasetpath  = /QCD_Pt-80to120_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU40bx50_POSTLS162_V2-v1/GEN-SIM-RAW
+#CMSSW.pycfg_params = QCD_Pt-80to120_Tune4C_13TeV_pythia8_PU40bx50
+#USER.user_remote_dir = QCD_Pt-80to120_Tune4C_13TeV_pythia8_PU40bx50
+#USER.ui_working_dir= QCD_Pt-80to120_Tune4C_13TeV_pythia8_PU40bx50
+#
+#[QCD_Pt-120to170_Tune4C_13TeV_pythia8_PU40bx50]
+#CMSSW.datasetpath  = /QCD_Pt-120to170_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU40bx50_POSTLS162_V2-v1/GEN-SIM-RAW
+#CMSSW.pycfg_params = QCD_Pt-120to170_Tune4C_13TeV_pythia8_PU40bx50
+#USER.user_remote_dir = QCD_Pt-120to170_Tune4C_13TeV_pythia8_PU40bx50
+#USER.ui_working_dir= QCD_Pt-120to170_Tune4C_13TeV_pythia8_PU40bx50
+#
+#[QCD_Pt-170to300_Tune4C_13TeV_pythia8_PU40bx50]
+#CMSSW.datasetpath  = /QCD_Pt-170to300_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU40bx50_POSTLS162_V2-v1/GEN-SIM-RAW
+#CMSSW.pycfg_params = QCD_Pt-170to300_Tune4C_13TeV_pythia8_PU40bx50
+#USER.user_remote_dir = QCD_Pt-170to300_Tune4C_13TeV_pythia8_PU40bx50
+#USER.ui_working_dir= QCD_Pt-170to300_Tune4C_13TeV_pythia8_PU40bx50
+#
+#[QCD_Pt-300to470_Tune4C_13TeV_pythia8_PU40bx50]
+#CMSSW.datasetpath  = /QCD_Pt-300to470_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU40bx50_POSTLS162_V2-v1/GEN-SIM-RAW
+#CMSSW.pycfg_params = QCD_Pt-300to470_Tune4C_13TeV_pythia8_PU40bx50
+#USER.user_remote_dir = QCD_Pt-300to470_Tune4C_13TeV_pythia8_PU40bx50
+#USER.ui_working_dir= QCD_Pt-300to470_Tune4C_13TeV_pythia8_PU40bx50
+#
+#[QCD_Pt-470to600_Tune4C_13TeV_pythia8_PU40bx50]
+#CMSSW.datasetpath  = /QCD_Pt-470to600_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU40bx50_POSTLS162_V2-v1/GEN-SIM-RAW
+#CMSSW.pycfg_params = QCD_Pt-470to600_Tune4C_13TeV_pythia8_PU40bx50
+#USER.user_remote_dir = QCD_Pt-470to600_Tune4C_13TeV_pythia8_PU40bx50
+#USER.ui_working_dir= QCD_Pt-470to600_Tune4C_13TeV_pythia8_PU40bx50
+#
+#[QCD_Pt-600to800_Tune4C_13TeV_pythia8_PU40bx50]
+#CMSSW.datasetpath  = /QCD_Pt-600to800_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU40bx50_POSTLS162_V2-v1/GEN-SIM-RAW
+#CMSSW.pycfg_params = QCD_Pt-600to800_Tune4C_13TeV_pythia8_PU40bx50
+#USER.user_remote_dir = QCD_Pt-600to800_Tune4C_13TeV_pythia8_PU40bx50
+#USER.ui_working_dir= QCD_Pt-600to800_Tune4C_13TeV_pythia8_PU40bx50
+#
+#[QCD_Pt-800to1000_Tune4C_13TeV_pythia8_PU40bx50]
+#CMSSW.datasetpath  = /QCD_Pt-800to1000_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU40bx50_POSTLS162_V2-v1/GEN-SIM-RAW
+#CMSSW.pycfg_params = QCD_Pt-800to1000_Tune4C_13TeV_pythia8_PU40bx50
+#USER.user_remote_dir = QCD_Pt-800to1000_Tune4C_13TeV_pythia8_PU40bx50
+#USER.ui_working_dir= QCD_Pt-800to1000_Tune4C_13TeV_pythia8_PU40bx50
+#
+#[QCD_Pt-1000to1400_Tune4C_13TeV_pythia8_PU40bx50]
+#CMSSW.datasetpath  = /QCD_Pt-1000to1400_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU40bx50_POSTLS162_V2-v1/GEN-SIM-RAW
+#CMSSW.pycfg_params = QCD_Pt-1000to1400_Tune4C_13TeV_pythia8_PU40bx50
+#USER.user_remote_dir = QCD_Pt-1000to1400_Tune4C_13TeV_pythia8_PU40bx50
+#USER.ui_working_dir= QCD_Pt-1000to1400_Tune4C_13TeV_pythia8_PU40bx50
+#
+#[QCD_Pt-1400to1800_Tune4C_13TeV_pythia8_PU40bx50]
+#CMSSW.datasetpath  = /QCD_Pt-1400to1800_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU40bx50_POSTLS162_V1-v1/GEN-SIM-RAW
+#CMSSW.pycfg_params = QCD_Pt-1400to1800_Tune4C_13TeV_pythia8_PU40bx50
+#USER.user_remote_dir = QCD_Pt-1400to1800_Tune4C_13TeV_pythia8_PU40bx50
+#USER.ui_working_dir= QCD_Pt-1400to1800_Tune4C_13TeV_pythia8_PU40bx50
 
 #[QCD_Pt-1800_Tune4C_13TeV_pythia8_PU40bx50]
 #CMSSW.datasetpath  = /QCD_Pt-1800_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU40bx50_POSTLS162_V2-v1/GEN-SIM-RAW
@@ -264,49 +258,42 @@ USER.ui_working_dir= QCD_Pt-1400to1800_Tune4C_13TeV_pythia8_PU40bx50
 #CMSSW.pycfg_params = QCD_Pt-50to80_Tune4C_13TeV_pythia8_PU40bx25
 #USER.user_remote_dir = QCD_Pt-50to80_Tune4C_13TeV_pythia8_PU40bx25
 #USER.ui_working_dir= QCD_Pt-50to80_Tune4C_13TeV_pythia8_PU40bx25
-#
-#[QCD_Pt-80to120_Tune4C_13TeV_pythia8_PU40bx25]
-#CMSSW.datasetpath  = /QCD_Pt-80to120_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU40bx25_POSTLS162_V2-v1/GEN-SIM-RAW
-#CMSSW.pycfg_params = QCD_Pt-80to120_Tune4C_13TeV_pythia8_PU40bx25
-#USER.user_remote_dir = QCD_Pt-80to120_Tune4C_13TeV_pythia8_PU40bx25
-#USER.ui_working_dir= QCD_Pt-80to120_Tune4C_13TeV_pythia8_PU40bx25
 
-#[QCD_Pt-120to170_Tune4C_13TeV_pythia8_PU40bx25]
-#CMSSW.datasetpath  = /QCD_Pt-120to170_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU40bx25_POSTLS162_V2-v1/GEN-SIM-RAW
-#CMSSW.pycfg_params = QCD_Pt-120to170_Tune4C_13TeV_pythia8_PU40bx25
-#USER.user_remote_dir = QCD_Pt-120to170_Tune4C_13TeV_pythia8_PU40bx25
-#USER.ui_working_dir= QCD_Pt-120to170_Tune4C_13TeV_pythia8_PU40bx25
-#
-#[QCD_Pt-170to300_Tune4C_13TeV_pythia8_PU40bx25]
-#CMSSW.datasetpath  = /QCD_Pt-170to300_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU40bx25_POSTLS162_V2-v1/GEN-SIM-RAW
-#CMSSW.pycfg_params = QCD_Pt-170to300_Tune4C_13TeV_pythia8_PU40bx25
-#USER.user_remote_dir = QCD_Pt-170to300_Tune4C_13TeV_pythia8_PU40bx25
-#USER.ui_working_dir= QCD_Pt-170to300_Tune4C_13TeV_pythia8_PU40bx25
-#
-#[QCD_Pt-300to470_Tune4C_13TeV_pythia8_PU40bx25]
-#CMSSW.datasetpath  = /QCD_Pt-300to470_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU40bx25_POSTLS162_V2-v1/GEN-SIM-RAW
-#CMSSW.pycfg_params = QCD_Pt-300to470_Tune4C_13TeV_pythia8_PU40bx25
-#USER.user_remote_dir = QCD_Pt-300to470_Tune4C_13TeV_pythia8_PU40bx25
-#USER.ui_working_dir= QCD_Pt-300to470_Tune4C_13TeV_pythia8_PU40bx25
-#
-#[QCD_Pt-470to600_Tune4C_13TeV_pythia8_PU40bx25]
-#CMSSW.datasetpath  = /QCD_Pt-470to600_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU40bx25_POSTLS162_V2-v1/GEN-SIM-RAW
-#CMSSW.pycfg_params = QCD_Pt-470to600_Tune4C_13TeV_pythia8_PU40bx25
-#USER.user_remote_dir = QCD_Pt-470to600_Tune4C_13TeV_pythia8_PU40bx25
-#USER.ui_working_dir= QCD_Pt-470to600_Tune4C_13TeV_pythia8_PU40bx25
-#
-#[QCD_Pt-600to800_Tune4C_13TeV_pythia8_PU40bx25]
-#CMSSW.datasetpath  = /QCD_Pt-600to800_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU40bx25_POSTLS162_V2-v1/GEN-SIM-RAW
-#CMSSW.pycfg_params = QCD_Pt-600to800_Tune4C_13TeV_pythia8_PU40bx25
-#USER.user_remote_dir = QCD_Pt-600to800_Tune4C_13TeV_pythia8_PU40bx25
-#USER.ui_working_dir= QCD_Pt-600to800_Tune4C_13TeV_pythia8_PU40bx25
-#
-#[QCD_Pt-800to1000_Tune4C_13TeV_pythia8_PU40bx25]
-#CMSSW.datasetpath  = /QCD_Pt-800to1000_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU40bx25_POSTLS162_V2-v1/GEN-SIM-RAW
-#CMSSW.pycfg_params = QCD_Pt-800to1000_Tune4C_13TeV_pythia8_PU40bx25
-#USER.user_remote_dir = QCD_Pt-800to1000_Tune4C_13TeV_pythia8_PU40bx25
-#USER.ui_working_dir= QCD_Pt-800to1000_Tune4C_13TeV_pythia8_PU40bx25
-#
+[QCD_Pt-80to120_Tune4C_13TeV_pythia8_PU40bx25]
+CMSSW.datasetpath  = /QCD_Pt-80to120_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU40bx25_POSTLS162_V2-v1/GEN-SIM-RAW
+USER.user_remote_dir = QCD_Pt-80to120_Tune4C_13TeV_pythia8_PU40bx25
+USER.ui_working_dir= QCD_Pt-80to120_Tune4C_13TeV_pythia8_PU40bx25
+
+[QCD_Pt-120to170_Tune4C_13TeV_pythia8_PU40bx25]
+CMSSW.datasetpath  = /QCD_Pt-120to170_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU40bx25_POSTLS162_V2-v1/GEN-SIM-RAW
+USER.user_remote_dir = QCD_Pt-120to170_Tune4C_13TeV_pythia8_PU40bx25
+USER.ui_working_dir= QCD_Pt-120to170_Tune4C_13TeV_pythia8_PU40bx25
+
+[QCD_Pt-170to300_Tune4C_13TeV_pythia8_PU40bx25]
+CMSSW.datasetpath  = /QCD_Pt-170to300_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU40bx25_POSTLS162_V2-v1/GEN-SIM-RAW
+USER.user_remote_dir = QCD_Pt-170to300_Tune4C_13TeV_pythia8_PU40bx25
+USER.ui_working_dir= QCD_Pt-170to300_Tune4C_13TeV_pythia8_PU40bx25
+
+[QCD_Pt-300to470_Tune4C_13TeV_pythia8_PU40bx25]
+CMSSW.datasetpath  = /QCD_Pt-300to470_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU40bx25_POSTLS162_V2-v1/GEN-SIM-RAW
+USER.user_remote_dir = QCD_Pt-300to470_Tune4C_13TeV_pythia8_PU40bx25
+USER.ui_working_dir= QCD_Pt-300to470_Tune4C_13TeV_pythia8_PU40bx25
+
+[QCD_Pt-470to600_Tune4C_13TeV_pythia8_PU40bx25]
+CMSSW.datasetpath  = /QCD_Pt-470to600_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU40bx25_POSTLS162_V2-v1/GEN-SIM-RAW
+USER.user_remote_dir = QCD_Pt-470to600_Tune4C_13TeV_pythia8_PU40bx25
+USER.ui_working_dir= QCD_Pt-470to600_Tune4C_13TeV_pythia8_PU40bx25
+
+[QCD_Pt-600to800_Tune4C_13TeV_pythia8_PU40bx25]
+CMSSW.datasetpath  = /QCD_Pt-600to800_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU40bx25_POSTLS162_V2-v1/GEN-SIM-RAW
+USER.user_remote_dir = QCD_Pt-600to800_Tune4C_13TeV_pythia8_PU40bx25
+USER.ui_working_dir= QCD_Pt-600to800_Tune4C_13TeV_pythia8_PU40bx25
+
+[QCD_Pt-800to1000_Tune4C_13TeV_pythia8_PU40bx25]
+CMSSW.datasetpath  = /QCD_Pt-800to1000_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU40bx25_POSTLS162_V2-v1/GEN-SIM-RAW
+USER.user_remote_dir = QCD_Pt-800to1000_Tune4C_13TeV_pythia8_PU40bx25
+USER.ui_working_dir= QCD_Pt-800to1000_Tune4C_13TeV_pythia8_PU40bx25
+
 #[QCD_Pt-1000to1400_Tune4C_13TeV_pythia8_PU40bx25]
 #CMSSW.datasetpath  = /QCD_Pt-1000to1400_Tune4C_13TeV_pythia8/Fall13dr-castor_tsg_PU40bx25_POSTLS162_V2-v1/GEN-SIM-RAW
 #CMSSW.pycfg_params = QCD_Pt-1000to1400_Tune4C_13TeV_pythia8_PU40bx25
