--- a/test/multicrab_Signal.cfg
+++ b/test/multicrab_Signal.cfg
@@ -3,60 +3,61 @@ cfg = crab_TEMPLATESignal.cfg
 
 [COMMON]
 
-CMSSW.number_of_jobs        = 1000
+CMSSW.number_of_jobs        = 950
 CMSSW.total_number_of_events = 100000
 CMSSW.dbs_url = phys03
-CMSSW.pset = /uscms_data/d3/algomez/triggerStudies/CMSSW_7_1_7/src/MyTrigger/myTriggerStudies/test/myPATproducer_openHLT.py
-USER.publish_data_name = openHLT_Prod_v718
+#CMSSW.pset = myPATproducer_openHLT.py
+CMSSW.pset = dumpMC.py
+USER.publish_data_name = openHLT_Prod_v718_v5
 
+#[RPVSt100tojj_13TeV_pythia8_PU40bx50_HLT2PAT]
+#CMSSW.datasetpath  = /RPVSt100tojj_13TeV_pythia8_GENSIM/algomez-RPVSt100tojj_13TeV_pythia8_AODSIM_625_PU40bx50_v2-ca86998ca30d3e49107c4139b65d2908/USER
+#CMSSW.pycfg_params = RPVSt100tojj_13TeV_pythia8_PU40bx50_HLT2PAT
+#CMSSW.output_file = RPVSt100tojj_13TeV_pythia8_PU40bx50_HLT2PAT_Prod.root
+#USER.user_remote_dir = RPVSt100tojj_13TeV_pythia8_PU40bx50_HLT2PAT
+#USER.ui_working_dir= RPVSt100tojj_13TeV_pythia8_PU40bx50_HLT2PAT
+#
 #[RPVSt100tojj_13TeV_pythia8_PU40bx25_HLT2PAT]
 #CMSSW.datasetpath  = /RPVSt100tojj_13TeV_pythia8_GENSIM/algomez-RPVSt100tojj_13TeV_pythia8_AODSIM_625_PU40bx25_v2-ca86998ca30d3e49107c4139b65d2908/USER
 #CMSSW.pycfg_params = RPVSt100tojj_13TeV_pythia8_PU40bx25_HLT2PAT
 #CMSSW.output_file = RPVSt100tojj_13TeV_pythia8_PU40bx25_HLT2PAT_Prod.root
 #USER.user_remote_dir = RPVSt100tojj_13TeV_pythia8_PU40bx25_HLT2PAT
 #USER.ui_working_dir= RPVSt100tojj_13TeV_pythia8_PU40bx25_HLT2PAT
-
-[RPVSt100tojj_13TeV_pythia8_PU40bx50_HLT2PAT]
-CMSSW.datasetpath  = /RPVSt100tojj_13TeV_pythia8_GENSIM/algomez-RPVSt100tojj_13TeV_pythia8_AODSIM_625_PU40bx50_v2-ca86998ca30d3e49107c4139b65d2908/USER
-CMSSW.pycfg_params = RPVSt100tojj_13TeV_pythia8_PU40bx50_HLT2PAT
-CMSSW.output_file = RPVSt100tojj_13TeV_pythia8_PU40bx50_HLT2PAT_Prod.root
-USER.user_remote_dir = RPVSt100tojj_13TeV_pythia8_PU40bx50_HLT2PAT
-USER.ui_working_dir= RPVSt100tojj_13TeV_pythia8_PU40bx50_HLT2PAT
-
-[RPVSt100tojj_13TeV_pythia8_PU20bx25_HLT2PAT]
-CMSSW.datasetpath  = /RPVSt100tojj_13TeV_pythia8_GENSIM/algomez-RPVSt100tojj_13TeV_pythia8_AODSIM_625_PU20bx25_v2-ca86998ca30d3e49107c4139b65d2908/USER
-CMSSW.pycfg_params = RPVSt100tojj_13TeV_pythia8_PU20bx25_HLT2PAT
-CMSSW.output_file = RPVSt100tojj_13TeV_pythia8_PU20bx25_HLT2PAT_Prod.root
-USER.user_remote_dir = RPVSt100tojj_13TeV_pythia8_PU20bx25_HLT2PAT
-USER.ui_working_dir= RPVSt100tojj_13TeV_pythia8_PU20bx25_HLT2PAT
-
-[500SbtoWSt_RPVSt100tojj_13TeV_pythia8_PU40bx25_HLT2PAT]
-CMSSW.datasetpath  = /Sig_500SbtoWSt_100RPVSttojj_13TeV_100K_GENSIM/mmorris-Sig_500SbtoWSt_100RPVSttojj_13TeV_100K_AODSIM_625_PU40bx25_v2-ca86998ca30d3e49107c4139b65d2908/USER
-CMSSW.pycfg_params = 500SbtoWSt_RPVSt100tojj_13TeV_pythia8_PU40bx25_HLT2PAT
-CMSSW.output_file = 500SbtoWSt_RPVSt100tojj_13TeV_pythia8_PU40bx25_HLT2PAT_Prod.root
-USER.user_remote_dir = 500SbtoWSt_RPVSt100tojj_13TeV_pythia8_PU40bx25_HLT2PAT
-USER.ui_working_dir= 500SbtoWSt_RPVSt100tojj_13TeV_pythia8_PU40bx25_HLT2PAT
-
-[500SbtoWSt_RPVSt100tojj_13TeV_pythia8_PU20bx25_HLT2PAT]
-CMSSW.datasetpath  = /Sig_500SbtoWSt_100RPVSttojj_13TeV_100K_GENSIM/algomez-500SbtoWSt_RPVSt100tojj_13TeV_pythia8_AODSIM_625_PU20bx25-ca86998ca30d3e49107c4139b65d2908/USER
-CMSSW.pycfg_params = 500SbtoWSt_RPVSt100tojj_13TeV_pythia8_PU20bx25_HLT2PAT
-CMSSW.output_file = 500SbtoWSt_RPVSt100tojj_13TeV_pythia8_PU20bx25_HLT2PAT_Prod.root
-USER.user_remote_dir = 500SbtoWSt_RPVSt100tojj_13TeV_pythia8_PU20bx25_HLT2PAT
-USER.ui_working_dir= 500SbtoWSt_RPVSt100tojj_13TeV_pythia8_PU20bx25_HLT2PAT
-
-[500St2toZSt1_150RPVSt1tojj_13TeV_pythia8_PU40bx25_HLT2PAT]
-CMSSW.datasetpath  = /St2toZSt1_150RPVSt1tojj_13TeV_100k_GENSIM/alkahn-St2toZSt1_150RPVSt1tojj_13TeV_100k_AODSIM_625_PU40bx25-ca86998ca30d3e49107c4139b65d2908/USER
-CMSSW.pycfg_params = 500St2toZSt1_150RPVSt1tojj_13TeV_pythia8_PU40bx25_HLT2PAT
-CMSSW.output_file = 500St2toZSt1_150RPVSt1tojj_13TeV_pythia8_PU40bx25_HLT2PAT_Prod.root
-USER.user_remote_dir = 500St2toZSt1_150RPVSt1tojj_13TeV_pythia8_PU40bx25_HLT2PAT
-USER.ui_working_dir= 500St2toZSt1_150RPVSt1tojj_13TeV_pythia8_PU40bx25_HLT2PAT
-
-[500St2toZSt1_150RPVSt1tojj_13TeV_pythia8_PU20bx25_HLT2PAT]
-CMSSW.datasetpath  = /St2toZSt1_150RPVSt1tojj_13TeV_100k_GENSIM/alkahn-St2toZSt1_150RPVSt1tojj_13TeV_100k_AODSIM_625_PU20bx25-ca86998ca30d3e49107c4139b65d2908/USER
-CMSSW.pycfg_params = 500St2toZSt1_150RPVSt1tojj_13TeV_pythia8_PU20bx25_HLT2PAT
-CMSSW.output_file = 500St2toZSt1_150RPVSt1tojj_13TeV_pythia8_PU20bx25_HLT2PAT_Prod.root
-USER.user_remote_dir = 500St2toZSt1_150RPVSt1tojj_13TeV_pythia8_PU20bx25_HLT2PAT
-USER.ui_working_dir= 500St2toZSt1_150RPVSt1tojj_13TeV_pythia8_PU20bx25_HLT2PAT
+#
+#[RPVSt100tojj_13TeV_pythia8_PU20bx25_HLT2PAT]
+#CMSSW.datasetpath  = /RPVSt100tojj_13TeV_pythia8_GENSIM/algomez-RPVSt100tojj_13TeV_pythia8_AODSIM_625_PU20bx25_v2-ca86998ca30d3e49107c4139b65d2908/USER
+#CMSSW.pycfg_params = RPVSt100tojj_13TeV_pythia8_PU20bx25_HLT2PAT
+#CMSSW.output_file = RPVSt100tojj_13TeV_pythia8_PU20bx25_HLT2PAT_Prod.root
+#USER.user_remote_dir = RPVSt100tojj_13TeV_pythia8_PU20bx25_HLT2PAT
+#USER.ui_working_dir= RPVSt100tojj_13TeV_pythia8_PU20bx25_HLT2PAT
+#
+#[500SbtoWSt_RPVSt100tojj_13TeV_pythia8_PU40bx25_HLT2PAT]
+#CMSSW.datasetpath  = /Sig_500SbtoWSt_100RPVSttojj_13TeV_100K_GENSIM/mmorris-Sig_500SbtoWSt_100RPVSttojj_13TeV_100K_AODSIM_625_PU40bx25_v2-ca86998ca30d3e49107c4139b65d2908/USER
+#CMSSW.pycfg_params = 500SbtoWSt_RPVSt100tojj_13TeV_pythia8_PU40bx25_HLT2PAT
+#CMSSW.output_file = 500SbtoWSt_RPVSt100tojj_13TeV_pythia8_PU40bx25_HLT2PAT_Prod.root
+#USER.user_remote_dir = 500SbtoWSt_RPVSt100tojj_13TeV_pythia8_PU40bx25_HLT2PAT
+#USER.ui_working_dir= 500SbtoWSt_RPVSt100tojj_13TeV_pythia8_PU40bx25_HLT2PAT
+#
+#[500SbtoWSt_RPVSt100tojj_13TeV_pythia8_PU20bx25_HLT2PAT]
+#CMSSW.datasetpath  = /Sig_500SbtoWSt_100RPVSttojj_13TeV_100K_GENSIM/algomez-500SbtoWSt_RPVSt100tojj_13TeV_pythia8_AODSIM_625_PU20bx25-ca86998ca30d3e49107c4139b65d2908/USER
+#CMSSW.pycfg_params = 500SbtoWSt_RPVSt100tojj_13TeV_pythia8_PU20bx25_HLT2PAT
+#CMSSW.output_file = 500SbtoWSt_RPVSt100tojj_13TeV_pythia8_PU20bx25_HLT2PAT_Prod.root
+#USER.user_remote_dir = 500SbtoWSt_RPVSt100tojj_13TeV_pythia8_PU20bx25_HLT2PAT
+#USER.ui_working_dir= 500SbtoWSt_RPVSt100tojj_13TeV_pythia8_PU20bx25_HLT2PAT
+#
+#[500St2toZSt1_150RPVSt1tojj_13TeV_pythia8_PU40bx25_HLT2PAT]
+#CMSSW.datasetpath  = /St2toZSt1_150RPVSt1tojj_13TeV_100k_GENSIM/alkahn-St2toZSt1_150RPVSt1tojj_13TeV_100k_AODSIM_625_PU40bx25-ca86998ca30d3e49107c4139b65d2908/USER
+#CMSSW.pycfg_params = 500St2toZSt1_150RPVSt1tojj_13TeV_pythia8_PU40bx25_HLT2PAT
+#CMSSW.output_file = 500St2toZSt1_150RPVSt1tojj_13TeV_pythia8_PU40bx25_HLT2PAT_Prod.root
+#USER.user_remote_dir = 500St2toZSt1_150RPVSt1tojj_13TeV_pythia8_PU40bx25_HLT2PAT
+#USER.ui_working_dir= 500St2toZSt1_150RPVSt1tojj_13TeV_pythia8_PU40bx25_HLT2PAT
+#
+#[500St2toZSt1_150RPVSt1tojj_13TeV_pythia8_PU20bx25_HLT2PAT]
+#CMSSW.datasetpath  = /St2toZSt1_150RPVSt1tojj_13TeV_100k_GENSIM/alkahn-St2toZSt1_150RPVSt1tojj_13TeV_100k_AODSIM_625_PU20bx25-ca86998ca30d3e49107c4139b65d2908/USER
+#CMSSW.pycfg_params = 500St2toZSt1_150RPVSt1tojj_13TeV_pythia8_PU20bx25_HLT2PAT
+#CMSSW.output_file = 500St2toZSt1_150RPVSt1tojj_13TeV_pythia8_PU20bx25_HLT2PAT_Prod.root
+#USER.user_remote_dir = 500St2toZSt1_150RPVSt1tojj_13TeV_pythia8_PU20bx25_HLT2PAT
+#USER.ui_working_dir= 500St2toZSt1_150RPVSt1tojj_13TeV_pythia8_PU20bx25_HLT2PAT
 
 #[SMS-T1tttt_2J_mGl-1500_mLSP-100_Tune4C_13TeV_PU20bx25_HLT2PAT]
 #CMSSW.datasetpath  = /SMS-T1tttt_2J_mGl-1500_mLSP-100_Tune4C_13TeV-madgraph-tauola/Spring14dr-PU20bx25_POSTLS170_V5-v2/AODSIM
@@ -72,10 +73,10 @@ USER.ui_working_dir= 500St2toZSt1_150RPVSt1tojj_13TeV_pythia8_PU20bx25_HLT2PAT
 ##USER.user_remote_dir = RSGravitonToWW_kMpl01_M_1000_Tune4C_13TeV_PU20bx25_HLT2PAT
 ##USER.ui_working_dir= RSGravitonToWW_kMpl01_M_1000_Tune4C_13TeV_PU20bx25_HLT2PAT
 #
-#[RSGluonToTT_M-3000_Tune4C_13TeV_PU20bx25_HLT2PAT]
-#CMSSW.datasetpath  = /RSGluonToTT_M-3000_Tune4C_13TeV-pythia8/Fall13dr-tsg_PU20bx25_POSTLS162_V2-v1/AODSIM
-#CMSSW.pycfg_params = RSGluonToTT_M-3000_Tune4C_13TeV_PU20bx25_HLT2PAT
-#CMSSW.output_file = RSGluonToTT_M-3000_Tune4C_13TeV_PU20bx25_HLT2PAT_Prod.root
-#USER.user_remote_dir = RSGluonToTT_M-3000_Tune4C_13TeV_PU20bx25_HLT2PAT
-#USER.ui_working_dir= RSGluonToTT_M-3000_Tune4C_13TeV_PU20bx25_HLT2PAT
-#
+[RSGravitonToWW_M_1000_Tune4C_13TeV_PU40bx25_HLT2PAT]
+CMSSW.datasetpath  = /RSGravitonToWW_kMpl01_M_1000_Tune4C_13TeV_pythia8/algomez-RSGravitonToWW_kMpl01_M_1000_Tune4C_13TeV_pythia8_AODSIM_v706_PU40bx25-5d30d9ccaa671717840644afc88e543e/USER
+CMSSW.pycfg_params = RSGravitonToWW_M_1000_Tune4C_13TeV_PU40bx25_HLT2PAT
+CMSSW.output_file = RSGravitonToWW_M_1000_Tune4C_13TeV_PU40bx25_HLT2PAT_Prod.root
+USER.user_remote_dir = RSGravitonToWW_M_1000_Tune4C_13TeV_PU40bx25_HLT2PAT
+USER.ui_working_dir= RSGravitonToWW_M_1000_Tune4C_13TeV_PU40bx25_HLT2PAT
+
