--- a/test/multicrab_SignalFilt.cfg
+++ b/test/multicrab_SignalFilt.cfg
@@ -7,12 +7,12 @@ CMSSW.number_of_jobs        = 100
 CMSSW.total_number_of_events = 100000
 CMSSW.pset =  myfilter_openHLT.py
 CMSSW.dbs_url = phys03
-USER.publish_data_name = openHLT_Filt_v718
+USER.publish_data_name = openHLT_Filt_v720pre8_v1
 
 [RPVSt100tojj_13TeV_pythia8_PU40bx25_Filt]
-CMSSW.datasetpath  = /RPVSt100tojj_13TeV_pythia8_GENSIM/algomez-openHLT_Prod_v718_RPVSt100tojj_13TeV_pythia8_PU40bx25_HLT2PAT-979775d326233ece1fce2cac5d03add5/USER
+CMSSW.datasetpath  = /RPVSt100tojj_13TeV_pythia8_GENSIM/algomez-openHLT_Prod_v720pre8_v2_RPVSt100tojj_13TeV_pythia8_PU40bx25_HLT2PAT-e997e4213a2d44dae7b8f751187de46d/USER
 CMSSW.pycfg_params = RPVSt100tojj_13TeV_pythia8_PU40bx25_Filt
-CMSSW.output_file = RPVSt100tojj_13TeV_pythia8_PU40bx25_Filt_Filt.root
+#CMSSW.output_file = RPVSt100tojj_13TeV_pythia8_PU40bx25_Filt_Filt.root
 USER.user_remote_dir = RPVSt100tojj_13TeV_pythia8_PU40bx25_Filt
 USER.ui_working_dir= RPVSt100tojj_13TeV_pythia8_PU40bx25_Filt
 
@@ -24,52 +24,52 @@ USER.ui_working_dir= RPVSt100tojj_13TeV_pythia8_PU40bx25_Filt
 #USER.ui_working_dir= RPVSt100tojj_13TeV_pythia8_PU40bx50
 #
 #[RPVSt100tojj_13TeV_pythia8_PU20bx25_Filt]
-#CMSSW.datasetpath  = /RPVSt100tojj_13TeV_pythia8_GENSIM/algomez-openHLT_Prod_v718_RPVSt100tojj_13TeV_pythia8_PU20bx25_HLT2PAT-979775d326233ece1fce2cac5d03add5/USER
+#CMSSW.datasetpath  = /RPVSt100tojj_13TeV_pythia8_GENSIM/algomez-openHLT_Prod_v718_v3_RPVSt100tojj_13TeV_pythia8_PU20bx25_HLT2PAT-3bab4fdea7e0e47ca242046da90bc3f6/USER
 #CMSSW.pycfg_params = RPVSt100tojj_13TeV_pythia8_PU20bx25_Filt
 #CMSSW.output_file = RPVSt100tojj_13TeV_pythia8_PU20bx25_Filt_Filt.root
 #USER.user_remote_dir = RPVSt100tojj_13TeV_pythia8_PU20bx25_Filt
 #USER.ui_working_dir= RPVSt100tojj_13TeV_pythia8_PU20bx25_Filt
 #
-[500SbtoWSt_RPVSt100tojj_13TeV_pythia8_PU40bx25_Filt]
-CMSSW.datasetpath  = /Sig_500SbtoWSt_100RPVSttojj_13TeV_100K_GENSIM/algomez-openHLT_Prod_v718_500SbtoWSt_RPVSt100tojj_13TeV_pythia8_PU40bx25_HLT2PAT-979775d326233ece1fce2cac5d03add5/USER
-CMSSW.pycfg_params = 500SbtoWSt_RPVSt100tojj_13TeV_pythia8_PU40bx25_Filt
-CMSSW.output_file = 500SbtoWSt_RPVSt100tojj_13TeV_pythia8_PU40bx25_Filt_Filt.root
-USER.user_remote_dir = 500SbtoWSt_RPVSt100tojj_13TeV_pythia8_PU40bx25_Filt
-USER.ui_working_dir= 500SbtoWSt_RPVSt100tojj_13TeV_pythia8_PU40bx25_Filt
+#[500SbtoWSt_RPVSt100tojj_13TeV_pythia8_PU40bx25_Filt]
+#CMSSW.datasetpath  = /Sig_500SbtoWSt_100RPVSttojj_13TeV_100K_GENSIM/algomez-openHLT_Prod_v718_v3_500SbtoWSt_RPVSt100tojj_13TeV_pythia8_PU40bx25_HLT2PAT-3bab4fdea7e0e47ca242046da90bc3f6/USER
+#CMSSW.pycfg_params = 500SbtoWSt_RPVSt100tojj_13TeV_pythia8_PU40bx25_Filt
+#CMSSW.output_file = 500SbtoWSt_RPVSt100tojj_13TeV_pythia8_PU40bx25_Filt_Filt.root
+#USER.user_remote_dir = 500SbtoWSt_RPVSt100tojj_13TeV_pythia8_PU40bx25_Filt
+#USER.ui_working_dir= 500SbtoWSt_RPVSt100tojj_13TeV_pythia8_PU40bx25_Filt
 #
 #[500SbtoWSt_RPVSt100tojj_13TeV_pythia8_PU20bx25_Filt]
-#CMSSW.datasetpath  = /Sig_500SbtoWSt_100RPVSttojj_13TeV_100K_GENSIM/algomez-openHLT_Prod_v718_500SbtoWSt_RPVSt100tojj_13TeV_pythia8_PU20bx25_HLT2PAT-979775d326233ece1fce2cac5d03add5/USER
+#CMSSW.datasetpath  = /Sig_500SbtoWSt_100RPVSttojj_13TeV_100K_GENSIM/algomez-openHLT_Prod_v718_v3_500SbtoWSt_RPVSt100tojj_13TeV_pythia8_PU20bx25_HLT2PAT-3bab4fdea7e0e47ca242046da90bc3f6/USER
 #CMSSW.pycfg_params = 500SbtoWSt_RPVSt100tojj_13TeV_pythia8_PU20bx25_Filt
 #CMSSW.output_file = 500SbtoWSt_RPVSt100tojj_13TeV_pythia8_PU20bx25_Filt_Filt.root
 #USER.user_remote_dir = 500SbtoWSt_RPVSt100tojj_13TeV_pythia8_PU20bx25_Filt
 #USER.ui_working_dir= 500SbtoWSt_RPVSt100tojj_13TeV_pythia8_PU20bx25_Filt
 #
-[500St2toZSt1_150RPVSt1tojj_13TeV_pythia8_PU40bx25_Filt]
-CMSSW.datasetpath  = /St2toZSt1_150RPVSt1tojj_13TeV_100k_GENSIM/algomez-openHLT_Prod_v718_500St2toZSt1_150RPVSt1tojj_13TeV_pythia8_PU40bx25_HLT2PAT-979775d326233ece1fce2cac5d03add5/USER
-CMSSW.pycfg_params = 500St2toZSt1_150RPVSt1tojj_13TeV_pythia8_PU40bx25_Filt
-CMSSW.output_file = 500St2toZSt1_150RPVSt1tojj_13TeV_pythia8_PU40bx25_Filt_Filt.root
-USER.user_remote_dir = 500St2toZSt1_150RPVSt1tojj_13TeV_pythia8_PU40bx25_Filt
-USER.ui_working_dir= 500St2toZSt1_150RPVSt1tojj_13TeV_pythia8_PU40bx25_Filt
-
+#[500St2toZSt1_150RPVSt1tojj_13TeV_pythia8_PU40bx25_Filt]
+#CMSSW.datasetpath  = /St2toZSt1_150RPVSt1tojj_13TeV_100k_GENSIM/algomez-openHLT_Prod_v718_v3_500St2toZSt1_150RPVSt1tojj_13TeV_pythia8_PU40bx25_HLT2PAT-3bab4fdea7e0e47ca242046da90bc3f6/USER
+#CMSSW.pycfg_params = 500St2toZSt1_150RPVSt1tojj_13TeV_pythia8_PU40bx25_Filt
+#CMSSW.output_file = 500St2toZSt1_150RPVSt1tojj_13TeV_pythia8_PU40bx25_Filt_Filt.root
+#USER.user_remote_dir = 500St2toZSt1_150RPVSt1tojj_13TeV_pythia8_PU40bx25_Filt
+#USER.ui_working_dir= 500St2toZSt1_150RPVSt1tojj_13TeV_pythia8_PU40bx25_Filt
+#
 #[500St2toZSt1_150RPVSt1tojj_13TeV_pythia8_PU20bx25_Filt]
-#CMSSW.datasetpath  = /St2toZSt1_150RPVSt1tojj_13TeV_100k_GENSIM/algomez-openHLT_Prod_v718_500St2toZSt1_150RPVSt1tojj_13TeV_pythia8_PU20bx25_HLT2PAT-979775d326233ece1fce2cac5d03add5/USER
+#CMSSW.datasetpath  = /St2toZSt1_150RPVSt1tojj_13TeV_100k_GENSIM/algomez-openHLT_Prod_v718_v3_500St2toZSt1_150RPVSt1tojj_13TeV_pythia8_PU20bx25_HLT2PAT-3bab4fdea7e0e47ca242046da90bc3f6/USER
 #CMSSW.pycfg_params = 500St2toZSt1_150RPVSt1tojj_13TeV_pythia8_PU20bx25_Filt
 #CMSSW.output_file = 500St2toZSt1_150RPVSt1tojj_13TeV_pythia8_PU20bx25_Filt_Filt.root
 #USER.user_remote_dir = 500St2toZSt1_150RPVSt1tojj_13TeV_pythia8_PU20bx25_Filt
 #USER.ui_working_dir= 500St2toZSt1_150RPVSt1tojj_13TeV_pythia8_PU20bx25_Filt
 #
 #[SMS-T1tttt_2J_mGl-1500_mLSP-100_Tune4C_13TeV_PU20bx25_Filt]
-#CMSSW.datasetpath  = /SMS-T1tttt_2J_mGl-1500_mLSP-100_Tune4C_13TeV-madgraph-tauola/algomez-openHLT_Prod_v718_SMS-T1tttt_2J_mGl-1500_mLSP-100_Tune4C_13TeV_PU20bx25_HLT2PAT-979775d326233ece1fce2cac5d03add5/USER
+#CMSSW.datasetpath  = /SMS-T1tttt_2J_mGl-1500_mLSP-100_Tune4C_13TeV-madgraph-tauola/algomez-openHLT_Prod_v718_v2_SMS-T1tttt_2J_mGl-1500_mLSP-100_Tune4C_13TeV_PU20bx25_HLT2PAT-979775d326233ece1fce2cac5d03add5/USER
 #CMSSW.pycfg_params = SMS-T1tttt_2J_mGl-1500_mLSP-100_Tune4C_13TeV_PU20bx25_Filt
 #CMSSW.output_file = SMS-T1tttt_2J_mGl-1500_mLSP-100_Tune4C_13TeV_PU20bx25_Filt_Filt.root
 #USER.user_remote_dir = SMS-T1tttt_2J_mGl-1500_mLSP-100_Tune4C_13TeV_PU20bx25_Filt
 #USER.ui_working_dir= SMS-T1tttt_2J_mGl-1500_mLSP-100_Tune4C_13TeV_PU20bx25_Filt
 #
 #
-#[RSGluonToTT_M-3000_Tune4C_13TeV_PU20bx25_Filt]
-#CMSSW.datasetpath  = /RSGluonToTT_M-3000_Tune4C_13TeV-pythia8/algomez-openHLT_Prod_v718_RSGluonToTT_M-3000_Tune4C_13TeV_PU20bx25_HLT2PAT-979775d326233ece1fce2cac5d03add5/USER
-#CMSSW.pycfg_params = RSGluonToTT_M-3000_Tune4C_13TeV_PU20bx25_Filt
-#CMSSW.output_file = RSGluonToTT_M-3000_Tune4C_13TeV_PU20bx25_Filt.root
-#USER.user_remote_dir = RSGluonToTT_M-3000_Tune4C_13TeV_PU20bx25_Filt
-#USER.ui_working_dir= RSGluonToTT_M-3000_Tune4C_13TeV_PU20bx25_Filt
+[RSGravitonToWW_M_1000_Tune4C_13TeV_PU40bx25_Filt]
+CMSSW.datasetpath  = /RSGravitonToWW_kMpl01_M_1000_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_v720pre8_v2_RSGravitonToWW_M_1000_Tune4C_13TeV_PU40bx25_HLT2PAT-ff7b1ef4d80d5a8897f2f489ec57bfdc/USER
+CMSSW.pycfg_params = RSGravitonToWW_M_1000_Tune4C_13TeV_PU40bx25_Filt
+#CMSSW.output_file = RSGravitonToWW_M_1000_Tune4C_13TeV_PU40bx25_Filt.root
+USER.user_remote_dir = RSGravitonToWW_M_1000_Tune4C_13TeV_PU40bx25_Filt
+USER.ui_working_dir= RSGravitonToWW_M_1000_Tune4C_13TeV_PU40bx25_Filt
 #
