--- a/test/crab_TEMPLATESignal.cfg
+++ b/test/crab_TEMPLATESignal.cfg
@@ -1,7 +1,7 @@
 [CRAB]
 
 jobtype                 = cmssw
-scheduler               = condor
+scheduler               = remoteGlidein
 #use_server              = 1
 
 [CMSSW]
@@ -20,6 +20,6 @@ storage_element = T3_US_FNALLPC
 #storage_element = cmseos.fnal.gov
 #storage_path = /srm/v2/server?SFN=/eos/uscms/store/user/lpctrig/ingabu/TMD/PU20bx25/
 
-#[GRID]
-#se_black_list = T2_US_Nebraska
+[GRID]
+data_location_override = T1_US_FNAL_Disk
 
