--- a/test/multicrab_Filt.cfg
+++ b/test/multicrab_Filt.cfg
@@ -5,88 +5,86 @@ cfg = crab_TEMPLATEFilt.cfg
 
 CMSSW.number_of_jobs        = 100
 CMSSW.total_number_of_events = 40000
-CMSSW.pset =  myfilter_1p4e34_openHLT.py
+CMSSW.pset =  myfilter_openHLT.py
 CMSSW.dbs_url=phys03
-USER.publish_data_name = openHLT_Filt_triggerStudies_v720pre6_v4
-USER.additional_input_files = dttf_config.db
+USER.publish_data_name = openHLT_Filt_triggerStudies_v720pre8_v2
 
 #
 #[QCD_Pt-80to120_Tune4C_13TeV_pythia8_PU20bx25_Filt]
-#CMSSW.datasetpath  = /QCD_Pt-80to120_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_triggerStudies_v720pre6_v4_QCD_Pt-80to120_Tune4C_13TeV_pythia8_PU20bx25-5e057a8abca1a3b114253d0bad0d3acb/USER
+#CMSSW.datasetpath  = /QCD_Pt-80to120_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_v720pre8_v2_QCD_Pt-80to120_Tune4C_13TeV_pythia8_PU20bx25-8b0bccc33229ae23584201b2cfe17bb7/USER
 #CMSSW.pycfg_params = QCD_Pt-80to120_Tune4C_13TeV_pythia8_PU20bx25_Filt
 #USER.user_remote_dir = QCD_Pt-80to120_Tune4C_13TeV_pythia8_PU20bx25_Filt
 #USER.ui_working_dir= QCD_Pt-80to120_Tune4C_13TeV_pythia8_PU20bx25_Filt
 #
 #[QCD_Pt-120to170_Tune4C_13TeV_pythia8_PU20bx25_Filt]
-#CMSSW.datasetpath  = /QCD_Pt-120to170_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_triggerStudies_v720pre6_v4_QCD_Pt-120to170_Tune4C_13TeV_pythia8_PU20bx25-5e057a8abca1a3b114253d0bad0d3acb/USER
+#CMSSW.datasetpath  = /QCD_Pt-120to170_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_v720pre8_v2_QCD_Pt-120to170_Tune4C_13TeV_pythia8_PU20bx25-8b0bccc33229ae23584201b2cfe17bb7/USER
 #CMSSW.pycfg_params = QCD_Pt-120to170_Tune4C_13TeV_pythia8_PU20bx25_Filt
 #USER.user_remote_dir = QCD_Pt-120to170_Tune4C_13TeV_pythia8_PU20bx25_Filt
 #USER.ui_working_dir= QCD_Pt-120to170_Tune4C_13TeV_pythia8_PU20bx25_Filt
 #
 #[QCD_Pt-170to300_Tune4C_13TeV_pythia8_PU20bx25_Filt]
-#CMSSW.datasetpath  = /QCD_Pt-170to300_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_triggerStudies_v720pre6_v4_QCD_Pt-170to300_Tune4C_13TeV_pythia8_PU20bx25-5e057a8abca1a3b114253d0bad0d3acb/USER
+#CMSSW.datasetpath  = /QCD_Pt-170to300_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_v720pre8_v2_QCD_Pt-170to300_Tune4C_13TeV_pythia8_PU20bx25-8b0bccc33229ae23584201b2cfe17bb7/USER
 #CMSSW.pycfg_params = QCD_Pt-170to300_Tune4C_13TeV_pythia8_PU20bx25_Filt
 #USER.user_remote_dir = QCD_Pt-170to300_Tune4C_13TeV_pythia8_PU20bx25_Filt
 #USER.ui_working_dir= QCD_Pt-170to300_Tune4C_13TeV_pythia8_PU20bx25_Filt
 #
 #[QCD_Pt-300to470_Tune4C_13TeV_pythia8_PU20bx25_Filt]
-#CMSSW.datasetpath  = /QCD_Pt-300to470_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_triggerStudies_v720pre6_v4_QCD_Pt-300to470_Tune4C_13TeV_pythia8_PU20bx25-5e057a8abca1a3b114253d0bad0d3acb/USER
+#CMSSW.datasetpath  = /QCD_Pt-300to470_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_v720pre8_v2_QCD_Pt-300to470_Tune4C_13TeV_pythia8_PU20bx25-8b0bccc33229ae23584201b2cfe17bb7/USER
 #CMSSW.pycfg_params = QCD_Pt-300to470_Tune4C_13TeV_pythia8_PU20bx25_Filt
 #USER.user_remote_dir = QCD_Pt-300to470_Tune4C_13TeV_pythia8_PU20bx25_Filt
 #USER.ui_working_dir= QCD_Pt-300to470_Tune4C_13TeV_pythia8_PU20bx25_Filt
 #
 #[QCD_Pt-470to600_Tune4C_13TeV_pythia8_PU20bx25_Filt]
-#CMSSW.datasetpath  = /QCD_Pt-470to600_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_triggerStudies_v720pre6_v4_QCD_Pt-470to600_Tune4C_13TeV_pythia8_PU20bx25-5e057a8abca1a3b114253d0bad0d3acb/USER
+#CMSSW.datasetpath  = /QCD_Pt-470to600_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_v720pre8_v2_QCD_Pt-470to600_Tune4C_13TeV_pythia8_PU20bx25-8b0bccc33229ae23584201b2cfe17bb7/USER
 #CMSSW.pycfg_params = QCD_Pt-470to600_Tune4C_13TeV_pythia8_PU20bx25_Filt
 #USER.user_remote_dir = QCD_Pt-470to600_Tune4C_13TeV_pythia8_PU20bx25_Filt
 #USER.ui_working_dir= QCD_Pt-470to600_Tune4C_13TeV_pythia8_PU20bx25_Filt
 #
 #[QCD_Pt-600to800_Tune4C_13TeV_pythia8_PU20bx25_Filt]
-#CMSSW.datasetpath  = /QCD_Pt-600to800_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_triggerStudies_v720pre6_v4_QCD_Pt-600to800_Tune4C_13TeV_pythia8_PU20bx25-5e057a8abca1a3b114253d0bad0d3acb/USER
+#CMSSW.datasetpath  = /QCD_Pt-600to800_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_v720pre8_v2_QCD_Pt-600to800_Tune4C_13TeV_pythia8_PU20bx25-8b0bccc33229ae23584201b2cfe17bb7/USER
 #CMSSW.pycfg_params = QCD_Pt-600to800_Tune4C_13TeV_pythia8_PU20bx25_Filt
 #USER.user_remote_dir = QCD_Pt-600to800_Tune4C_13TeV_pythia8_PU20bx25_Filt
 #USER.ui_working_dir= QCD_Pt-600to800_Tune4C_13TeV_pythia8_PU20bx25_Filt
 #
 #[QCD_Pt-800to1000_Tune4C_13TeV_pythia8_PU20bx25_Filt]
-#CMSSW.datasetpath  = /QCD_Pt-800to1000_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_triggerStudies_v720pre6_v4_QCD_Pt-800to1000_Tune4C_13TeV_pythia8_PU20bx25-5e057a8abca1a3b114253d0bad0d3acb/USER
+#CMSSW.datasetpath  = /QCD_Pt-800to1000_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_v720pre8_v2_QCD_Pt-800to1000_Tune4C_13TeV_pythia8_PU20bx25-8b0bccc33229ae23584201b2cfe17bb7/USER
 #CMSSW.pycfg_params = QCD_Pt-800to1000_Tune4C_13TeV_pythia8_PU20bx25_Filt
 #USER.user_remote_dir = QCD_Pt-800to1000_Tune4C_13TeV_pythia8_PU20bx25_Filt
 #USER.ui_working_dir= QCD_Pt-800to1000_Tune4C_13TeV_pythia8_PU20bx25_Filt
 
 
-
 [QCD_Pt-80to120_Tune4C_13TeV_pythia8_PU40bx25_Filt]
-CMSSW.datasetpath  = /QCD_Pt-80to120_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_triggerStudies_v720pre6_v4_QCD_Pt-80to120_Tune4C_13TeV_pythia8_PU40bx25-5e057a8abca1a3b114253d0bad0d3acb/USER
+CMSSW.datasetpath  = /QCD_Pt-80to120_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_v720pre8_v2_QCD_Pt-80to120_Tune4C_13TeV_pythia8_PU40bx25-8b0bccc33229ae23584201b2cfe17bb7/USER
 USER.user_remote_dir = QCD_Pt-80to120_Tune4C_13TeV_pythia8_PU40bx25_Filt
 USER.ui_working_dir= QCD_Pt-80to120_Tune4C_13TeV_pythia8_PU40bx25_Filt
 
 [QCD_Pt-120to170_Tune4C_13TeV_pythia8_PU40bx25_Filt]
-CMSSW.datasetpath  = /QCD_Pt-120to170_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_triggerStudies_v720pre6_v4_QCD_Pt-120to170_Tune4C_13TeV_pythia8_PU40bx25-5e057a8abca1a3b114253d0bad0d3acb/USER
+CMSSW.datasetpath  = /QCD_Pt-120to170_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_v720pre8_v2_QCD_Pt-120to170_Tune4C_13TeV_pythia8_PU40bx25-8b0bccc33229ae23584201b2cfe17bb7/USER
 USER.user_remote_dir = QCD_Pt-120to170_Tune4C_13TeV_pythia8_PU40bx25_Filt
 USER.ui_working_dir= QCD_Pt-120to170_Tune4C_13TeV_pythia8_PU40bx25_Filt
 
 [QCD_Pt-170to300_Tune4C_13TeV_pythia8_PU40bx25_Filt]
-CMSSW.datasetpath  = /QCD_Pt-170to300_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_triggerStudies_v720pre6_v4_QCD_Pt-170to300_Tune4C_13TeV_pythia8_PU40bx25-5e057a8abca1a3b114253d0bad0d3acb/USER
+CMSSW.datasetpath  = /QCD_Pt-170to300_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_v720pre8_v2_QCD_Pt-170to300_Tune4C_13TeV_pythia8_PU40bx25-8b0bccc33229ae23584201b2cfe17bb7/USER
 USER.user_remote_dir = QCD_Pt-170to300_Tune4C_13TeV_pythia8_PU40bx25_Filt
 USER.ui_working_dir= QCD_Pt-170to300_Tune4C_13TeV_pythia8_PU40bx25_Filt
 
 [QCD_Pt-300to470_Tune4C_13TeV_pythia8_PU40bx25_Filt]
-CMSSW.datasetpath  = /QCD_Pt-300to470_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_triggerStudies_v720pre6_v4_QCD_Pt-300to470_Tune4C_13TeV_pythia8_PU40bx25-5e057a8abca1a3b114253d0bad0d3acb/USER
+CMSSW.datasetpath  = /QCD_Pt-300to470_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_v720pre8_v2_QCD_Pt-300to470_Tune4C_13TeV_pythia8_PU40bx25-8b0bccc33229ae23584201b2cfe17bb7/USER
 USER.user_remote_dir = QCD_Pt-300to470_Tune4C_13TeV_pythia8_PU40bx25_Filt
 USER.ui_working_dir= QCD_Pt-300to470_Tune4C_13TeV_pythia8_PU40bx25_Filt
 
 [QCD_Pt-470to600_Tune4C_13TeV_pythia8_PU40bx25_Filt]
-CMSSW.datasetpath  = /QCD_Pt-470to600_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_triggerStudies_v720pre6_v4_QCD_Pt-470to600_Tune4C_13TeV_pythia8_PU40bx25-5e057a8abca1a3b114253d0bad0d3acb/USER
+CMSSW.datasetpath  = /QCD_Pt-470to600_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_v720pre8_v2_QCD_Pt-470to600_Tune4C_13TeV_pythia8_PU40bx25-8b0bccc33229ae23584201b2cfe17bb7/USER
 USER.user_remote_dir = QCD_Pt-470to600_Tune4C_13TeV_pythia8_PU40bx25_Filt
 USER.ui_working_dir= QCD_Pt-470to600_Tune4C_13TeV_pythia8_PU40bx25_Filt
 
 [QCD_Pt-600to800_Tune4C_13TeV_pythia8_PU40bx25_Filt]
-CMSSW.datasetpath  = /QCD_Pt-600to800_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_triggerStudies_v720pre6_v4_QCD_Pt-600to800_Tune4C_13TeV_pythia8_PU40bx25-5e057a8abca1a3b114253d0bad0d3acb/USER
+CMSSW.datasetpath  = /QCD_Pt-600to800_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_v720pre8_v2_QCD_Pt-600to800_Tune4C_13TeV_pythia8_PU40bx25-8b0bccc33229ae23584201b2cfe17bb7/USER
 USER.user_remote_dir = QCD_Pt-600to800_Tune4C_13TeV_pythia8_PU40bx25_Filt
 USER.ui_working_dir= QCD_Pt-600to800_Tune4C_13TeV_pythia8_PU40bx25_Filt
 
 [QCD_Pt-800to1000_Tune4C_13TeV_pythia8_PU40bx25_Filt]
-CMSSW.datasetpath  = /QCD_Pt-800to1000_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_triggerStudies_v720pre6_v4_QCD_Pt-800to1000_Tune4C_13TeV_pythia8_PU40bx25-5e057a8abca1a3b114253d0bad0d3acb/USER
+CMSSW.datasetpath  = /QCD_Pt-800to1000_Tune4C_13TeV_pythia8/algomez-openHLT_Prod_v720pre8_v2_QCD_Pt-800to1000_Tune4C_13TeV_pythia8_PU40bx25-8b0bccc33229ae23584201b2cfe17bb7/USER
 USER.user_remote_dir = QCD_Pt-800to1000_Tune4C_13TeV_pythia8_PU40bx25_Filt
 USER.ui_working_dir= QCD_Pt-800to1000_Tune4C_13TeV_pythia8_PU40bx25_Filt
 
